--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "bootstrap": "4.5.0",
     "interactjs": "1.9.14",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "svelte": "^3.18.1"
   },
   "scripts": {
